# roadpubsub

./: README.md  pyproject.toml
src/roadpubsub/: __init__.py  pubsub.py
